Fixxxed hover not showing in mobile version

--- a/Frontend/src/Css/ProyectCardMobile.css
+++ b/Frontend/src/Css/ProyectCardMobile.css
@@ -2,7 +2,7 @@
   position: relative;
   display: block;
   width: 80vw;
-  height: 460px;
+  height: 61.5vw;
   border-radius: 40px;
   overflow: hidden;
   text-decoration: none !important;
@@ -40,7 +40,7 @@
   transition: 0.2s ease-in-out;
   position: relative;
   height: 100%;
-  transform: translateY(-60%);
+  transform: translateY(-100%);
   border-top-right-radius: 40px;
   border-top-left-radius: 40px;
 }
@@ -95,7 +95,7 @@
   display: block;
   overflow: hidden;
   position: absolute;
-  top: 40%;
+  top: 60%;
   left: 0%;
   transform: translateY(-50%);
 }
@@ -127,27 +127,8 @@
 }
 .go_to_proyect {
   position: absolute;
-  bottom: 42%;
-  right: 10%;
+  bottom: 10%;
+  right: 5%;
   text-decoration: none;
   color: #ff7368;
-}
-.mobile_btn {
-  display: none;
-  font-size: 20px;
-  position: absolute;
-  bottom: 20px;
-  z-index: 99;
-  width: 50px;
-  height: 20px;
-  border-radius: 100vw;
-  color: #2b26c3;
-  border: 1px solid #2b26c3;
-  outline-color: #2b26c3;
-}
-
-.mobile_btn > i {
-  position: absolute;
-  top: 50%;
-  left: 50%;
 }
